--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -101,6 +101,7 @@ h2{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0px 5px;
 }
 .right{
   margin-left: 5vw;
@@ -117,6 +118,7 @@ h2{
 }
 
 input{
+  width: 100%;
   border-radius: 10px;
   font-size: 16px;
   padding: 5px;
