splash animado y mejoras visuales

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,13 @@
 <ion-content [fullscreen]="true">
-  <div class="contenedor">
+  <div class="splash-animado" *ngIf="cargando">
+    <h1>Juan Manuel</h1>
+    <h1>Garcia</h1>
+    <h1>4*B</h1>
+    <div class="posicion">
+      <img class="icon-animado" src="../../../assets/ic_launcher.png" width="25%" alt="">
+    </div>
+  </div>
+  <div class="contenedor" *ngIf="!cargando">
     <img src="../../assets/ic_launcher.png" width="25%" alt="">
     <form class="form" [formGroup]="form" (ngSubmit)="Login()">
       <div class="left">
